[package]
name = "merlin-core"
version = "0.1.0"
authors = ["Blessan Abraham <blessan.abraham@blippar.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
enum_dispatch = "0.2"
log = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
